--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Vesper_App</string>
+    <string name="pull">pull</string>
+    <string name="yahoonews">YahooNews</string>
 </resources>
