--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,12 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="ask_to_signup">Signup for a Vesper Account</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="blank_email">Email can\'t be blank</string>
+    <string name="blank_password">Password can\'t be empty</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="ask_to_login">Already have an account? Login.</string>
+    <string name="confirm_password">Confirm Password</string>
 </resources>
