--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,10 @@
     <string name="sign_up">Sign Up</string>
     <string name="ask_to_login">Already have an account? Login.</string>
     <string name="confirm_password">Confirm Password</string>
+    <string name="prompt_display_name">Display Name</string>
+    <string name="email_empty_error">Email cannot be empty</string>
+    <string name="password_short_error">Password is too short</string>
+    <string name="password_unmatch_error">Passwords do not match</string>
+    <string name="email_invalid_error">Email is not in a valid format</string>
+    <string name="message_prompt">Enter your message here</string>
 </resources>
