Implemented Signals display and details.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,9 @@
     <string name="password_unmatch_error">Passwords do not match</string>
     <string name="email_invalid_error">Email is not in a valid format</string>
     <string name="message_prompt">Enter your message here</string>
+    <string name="buy_signal">Buy@</string>
+    <string name="sell_message">Sell@</string>
+    <string name="stop_loss_message">Stop Loss@</string>
+    <string name="live_signal">LIVE</string>
+    <string name="expired_signal">EXPIRED</string>
 </resources>
