Implement signal rating systems and preferences

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,8 @@
     <string name="stop_loss_message">Stop Loss@</string>
     <string name="live_signal">LIVE</string>
     <string name="expired_signal">EXPIRED</string>
+    <string name="close_signal">Close Signal</string>
+    <string name="signal_upvote">Upvote</string>
+    <string name="remove_signal_upvote">Remove Upvote</string>
+    <string name="search_stock_prompt">Search a stock!</string>
 </resources>
