--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="change_bear_color">Change bear color</string>
     <string name="change_bull_color">Change bull color</string>
     <string name="no_group">No group</string>
+    <string name="join_group">JOIN</string>
 </resources>
