--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,13 @@
     <string name="change_bull_color">Change bull color</string>
     <string name="added_ticker_toast">Added Ticker</string>
     <string name="ticker_not_exist_toast">This ticker does not exist</string>
+    <string name="select_add_remove">Select Add or Remove</string>
+    <string name="authorize_removal">Authorize Removal</string>
+    <string name="price">Price</string>
+    <string name="authorize_addition">Authorize Addition</string>
+    <string name="daily_change">Daily Change</string>
+    <string name="ticker">Ticker</string>
+    <string name="add_error">Not able to add to watchlist, wait and try again</string>
+    <string name="ready_add">Ready to Add, Press Submit</string>
+    <string name="ready_delete" >Ready to Delete, Press Submit</string>
 </resources>
