--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,6 @@
     <string name="performance">PERFORMANCE</string>
     <string name="excellent_signals_count">Excellent Signals Count:</string>
     <string name="profitable_signals_count">Profitable Signals Count:</string>
+    <string name="select_button_prompt">Select a Button Below before Submitting</string>
+    <string name="invalid_ticker">Not a valid ticker</string>
 </resources>
